manifests/sciety-demo/coar-notify-inbox-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: coar-notify-inbox--demo
  labels:
    app.kubernetes.io/name: sciety
    app.kubernetes.io/instance: sciety--demo
    app.kubernetes.io/component: coar-notify-inbox
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
      protocol: TCP
  selector:
    application: coar-notify-inbox--demo
