manifests/sciety-demo/coar-notify-inbox.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coar-notify-inbox--demo
  labels:
    application: coar-notify-inbox--demo
spec:
  replicas: 1
  selector:
    matchLabels:
      application: coar-notify-inbox--demo
  template:
    metadata:
      labels:
        application: coar-notify-inbox--demo
    spec:
      containers:
      - name: app
        image: dragasteff/coar-notify-inbox:0.0.2-amd64
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: coar-notify-inbox--demo
  labels:
    app.kubernetes.io/name: sciety
    app.kubernetes.io/instance: sciety--demo
    app.kubernetes.io/component: coar-notify-inbox
spec:
  type: ClusterIP
  ports:
    - targetPort: 8080
      port: 80
      protocol: TCP
  selector:
    application: coar-notify-inbox--demo
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coar-notify-inbox--demo
  labels:
    app.kubernetes.io/name: sciety
    app.kubernetes.io/instance: sciety--demo
    app.kubernetes.io/component: coar-notify-inbox
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  rules:
    - host: coar-notify-inbox-sciety-demo.elifesciences.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coar-notify-inbox--demo
                port:
                  number: 80
  tls:
    - hosts:
        - coar-notify-inbox-sciety-demo.elifesciences.org
      secretName: sciety--demo--coar-notify-inbox--letsencrypt-cert
